7: Change username to email login.
