# controllers/user.js
@@ -4,7 +4,7 @@ var User = require('../models/user');
 // Create endpoint /api/users for POST
 exports.postUsers = function(req, res) {
   var user = new User({
-    username: req.body.username,
+    email: req.body.email,
     password: req.body.password
   });
 
